added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
                 <li>Projects</li>
                 <li>Stages</li>
                 <li>Services</li>
-                <li>
-                    <div class="phone">
-                        <i class="fa-solid fa-phone-volume"></i>
-                    </div>
-    
-                    <div class="text-number">
-                        <p class="text">Call Us</p>
-                        <p>+38 (097) 654 54 34</p>
-                    </div>
-                </li>
             </ul>
+            <div class="nav-right">
+                <div class="phone">
+                    <i class="fa-solid fa-phone-volume"></i>
+                </div>
+
+                <div class="text-number">
+                    <p class="text">Call Us</p>
+                    <p>+38 (097) 654 54 34</p>
+                </div>
+            </div>
         </nav>
     
         <div class="main">
